# agent-playground

./: .env.example  AGENTS.md  README.md  pyproject.toml  start.sh
app/: agent.py  config.py  debug_tools.py  flow_engine.py  flow_nodes.py  logger.py  main.py  prompts.py  schemas.py  state.py  tools.py
docs/: tools.md  week3_findings.md
scripts/: cases_week2.py  cases_week3.py  cases_week4.py  cases_week4_v2.py  eval_week3_flow.py  eval_week4_pipeline.py  eval_week4_v2.py  manual_eval.py
